--- a/src/main/webapp/app/package.json
+++ b/src/main/webapp/app/package.json
@@ -10,6 +10,10 @@
   "dependencies": {
     "webpack": "^2.5.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "jquery": "^3.2.1",
+    "webpack-dev-server": "^2.4.5"
+  },
   "description": ""
 }
