--- a/src/main/webapp/resources/js/package.json
+++ b/src/main/webapp/resources/js/package.json
@@ -3,16 +3,23 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "dev": "webpack -d --watch",
+    "prod": "webpack -p"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "css-loader": "^0.28.1",
+    "html-webpack-plugin": "^2.28.0",
     "webpack": "^2.5.1"
   },
   "devDependencies": {
     "babel": "^6.23.0",
+    "cssloader": "^1.1.1",
     "jquery": "^3.2.1",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.17.0",
     "webpack-dev-server": "^2.4.5"
   },
   "description": ""
